--- a/Song.ipynb
+++ b/Song.ipynb
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "c4c515bd-6384-4e92-8452-aa0961370226"
+        "outputId": "aa83e1db-3d7e-40bb-b4d0-56a0fb52df71"
       },
       "source": [
         "#import data\n",
@@ -117,10 +117,10 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "#เก็บข้อมูลลงในตัวแปร s_data\n",
-        "s_data = pd.read_csv('/content/drive/MyDrive/CS434/01/top50.csv', encoding='ISO-8859-1')\n",
+        "s_data = pd.read_csv('https://raw.githubusercontent.com/supat55/cs434RachamonVer3/main/top50.csv', encoding='ISO-8859-1')\n",
         "s_data.head(5)"
       ],
-      "execution_count": 1,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 47
         }
       ]
     },
