--- a/Song.ipynb
+++ b/Song.ipynb
@@ -4532,9 +4532,9 @@
         "id": "xG508dat5YqH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 895
+          "height": 591
         },
-        "outputId": "b838361b-1509-4f27-d160-d8a03d393285"
+        "outputId": "e7e3f06c-a0c7-4197-f4b3-8c1a644d903f"
       },
       "source": [
         "# (Music : Genre,Energy.Type,Danceability.Type,LoudnessdB.Type,Liveness.Type,Valence.Type,Acousticness.Type,Speechiness.Type,BPM.Type,Mood)\n",
@@ -4553,14 +4553,14 @@
         "             gr.outputs.Textbox(label='Target column')])\n",
         "iface.launch(debug=True)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "Running on public URL: https://45035.gradio.app\n",
+            "Running on public URL: https://23136.gradio.app\n",
             "\n",
             "This share link will expire in 72 hours. To get longer links, send an email to: support@gradio.app\n"
           ]
@@ -4573,29 +4573,17 @@
               "        <iframe\n",
               "            width=\"900\"\n",
               "            height=\"500\"\n",
-              "            src=\"https://45035.gradio.app\"\n",
+              "            src=\"https://23136.gradio.app\"\n",
               "            frameborder=\"0\"\n",
               "            allowfullscreen\n",
               "        ></iframe>\n",
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7fc74d380850>"
+              "<IPython.lib.display.IFrame at 0x7fc74d4165d0>"
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-45-2710a7192852>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m              \u001b[0mgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Similar Song'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m              gr.outputs.Textbox(label='Target column')])\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0miface\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaunch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/gradio/interface.py\u001b[0m in \u001b[0;36mlaunch\u001b[0;34m(self, inline, inbrowser, share, debug, auth, auth_message, private_endpoint, prevent_thread_lock, show_error)\u001b[0m\n\u001b[1;32m    644\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m                 \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 646\u001b[0;31m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    647\u001b[0m         is_in_interactive_mode = bool(\n\u001b[1;32m    648\u001b[0m             getattr(sys, 'ps1', sys.flags.interactive))\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
